--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@wdio/allure-reporter": "^9.4.4",
     "@wdio/cli": "^9.4.5",
+    "@wdio/cucumber-framework": "^9.5.0",
     "@wdio/local-runner": "^9.4.5",
     "@wdio/mocha-framework": "^9.4.4",
     "@wdio/spec-reporter": "^9.4.4",
-    "@wdio/allure-reporter": "^9.4.4",
     "allure-commandline": "^2.32.0",
+    "chai": "^5.1.2",
+    "chromedriver": "^131.0.3",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "globals": "^15.14.0",
-    "prettier": "3.4.2",
-    "supertest": "^7.0.0",
-    "mocha": "^11.0.1",
-    "chai": "^5.1.2",
-    "chromedriver": "^131.0.3",
     "geckodriver": "^5.0.0",
-    "safaridriver": "^1.0.0"
-  },
-  "dependencies": {}
+    "globals": "^15.14.0",
+    "mocha": "^11.0.1",
+    "prettier": "3.4.2",
+    "safaridriver": "^1.0.0",
+    "supertest": "^7.0.0"
+  }
 }
